<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clouds_mountains_art"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/male_emage" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/user_name"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <Button
                android:id="@+id/selectFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_background"
                android:text="@string/select_file"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/selectFile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/input_background"
                android:hint="@string/file_name_to_display"
                android:importantForAutofill="no"
                android:inputType=""
                android:padding="15dp" />

            <TextView
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/file_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/input_background"
                android:padding="15dp"
                android:text="@string/no_file_is_selected" />

            <Button
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notification"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_background"
                android:text="@string/upload"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fetch_files"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/upload"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_background"
                android:text="@string/fetch"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
